--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,20 +4,32 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <Button
-        android:id="@+id/connection"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/subsName"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="连接" />
+        android:layout_marginTop="100dp"
+        android:hint="请输入订阅" />
 
-    <Button
-        android:id="@+id/subs"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="订阅" />
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/connection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="连接" />
+
+        <Button
+            android:id="@+id/subs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="订阅" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/disconnection"
@@ -25,15 +37,18 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="取消连接" />
-<TextView
-    android:id="@+id/text"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"></TextView>
+
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></TextView>
+
     <EditText
         android:id="@+id/message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp" />
+        android:layout_marginTop="100dp"
+        android:hint="请输入发送内容" />
 
     <Button
         android:id="@+id/send"
